Fixes width issues with cover and centers text
- Fixes an issue with the container in the jumbotron that created a
horizontal scroll issue
- Centers text

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,133 +1,164 @@
 $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import '~bootstrap-sass/assets/stylesheets/bootstrap';
 
-.jumbotron {
-  background-image: url('./hugo-kemmel-210791.jpg');
-  background-size: cover;
-  height: 100vh;
-  margin: 0;
-
+// .jumbotron {
+//   background-image: url('./hugo-kemmel-210791.jpg');
+//   background-size: cover;
+//   height: 100vh;
+//   margin: 0;
+//
+// }
+html,
+body {
+    width: 100%;
+    height: 100%;
 }
-
 // .navbar {
 //   top: 0;
 //   z-index: 1;
 //   position: fixed;
 // }
-.title-landing {
-  color: white;
-  position: absolute;
-  top: 50%;
-  left: 65%;
-  transform: translate(-50%, -50%);
-  margin: 0 auto;
+// .title-landing {
+//   color: white;
+//   position: absolute;
+//   top: 50%;
+//   left: 65%;
+//   transform: translate(-50%, -50%);
+//   margin: 0 auto;
+// }
+
+.text-vertical-center {
+    display: table-cell;
+    text-align: center;
+    vertical-align: middle;
 }
 
-.buttons
-
-#fileId {
-  display: none;
-}
-
-#signUpButton, #signInButton {
-  margin: 10px;
-
-}
-#sidebar-wrapper {
-    z-index: 2;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 250px;
-    height: 100%;
-    background: #222;
-}
-
-.sidebar-nav {
-    position: absolute;
-    left: 0;
-    width: 250px;
+.text-vertical-center h1 {
     margin: 0;
     padding: 0;
-    list-style: none;
+    font-size: 4.5em;
+    font-weight: 700;
 }
 
-.sidebar-nav li {
-    text-indent: 20px;
-    line-height: 40px;
+.cover {
+    display: table;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background: url(./hugo-kemmel-210791.jpg) no-repeat center center scroll;
+    background-size: cover;
+    color: green;
+}
+hr {
+  width: 150px;
+}
+.hook {
+  color: white;
 }
 
-.sidebar-nav li a {
-    display: block;
-    text-decoration: none;
-    color: #999;
-}
-
-.sidebar-nav li a:hover {
-    text-decoration: none;
-    color: #fff;
-    background: rgba(255,255,255,0.2);
-}
-
-.sidebar-nav li a:active,
-.sidebar-nav li a:focus {
-    text-decoration: none;
-}
-
-.sidebar-nav > .sidebar-brand {
-    height: 55px;
-    font-size: 18px;
-    line-height: 55px;
-}
-
-.sidebar-nav > .sidebar-brand a {
-    color: #999;
-}
-
-.sidebar-nav > .sidebar-brand a:hover {
-    color: #fff;
-    background: none;
-}
-.images {
-  background-size: cover;
-  background-position: center;
-  width: 24%;
-  height: 500px;
-  margin: 10px 0;
-  padding: 0;
-  position: relative
-}
-
-.images .hidden-text {
-position:relative;
-visibility: hidden;
-text-align: center;
-padding: 10%;
-color: white;
-font-size: 20px;
-}
-
-.images .hidden-buttons {
-width:89%;
-height: 20px;
-position:relative;
-visibility: hidden;
-align-items: center;
-padding: 10%;
-margin: 1px 5%;
-color: white;
-}
-
-.images:hover > .overlay {
-    width:100%;
-    height:100%;
-    position:absolute;
-    background-color:#000;
-    opacity:0.5;
-}
-.images:hover .hidden-text {
-visibility: visible;
-}
-.images:hover .hidden-buttons {
-visibility: visible;
-}
+// #fileId {
+//   display: none;
+// }
+//
+// #signUpButton, #signInButton {
+//   margin: 10px;
+//
+// }
+// #sidebar-wrapper {
+//     z-index: 2;
+//     position: fixed;
+//     top: 0;
+//     left: 0;
+//     width: 250px;
+//     height: 100%;
+//     background: #222;
+// }
+//
+// .sidebar-nav {
+//     position: absolute;
+//     left: 0;
+//     width: 250px;
+//     margin: 0;
+//     padding: 0;
+//     list-style: none;
+// }
+//
+// .sidebar-nav li {
+//     text-indent: 20px;
+//     line-height: 40px;
+// }
+//
+// .sidebar-nav li a {
+//     display: block;
+//     text-decoration: none;
+//     color: #999;
+// }
+//
+// .sidebar-nav li a:hover {
+//     text-decoration: none;
+//     color: #fff;
+//     background: rgba(255,255,255,0.2);
+// }
+//
+// .sidebar-nav li a:active,
+// .sidebar-nav li a:focus {
+//     text-decoration: none;
+// }
+//
+// .sidebar-nav > .sidebar-brand {
+//     height: 55px;
+//     font-size: 18px;
+//     line-height: 55px;
+// }
+//
+// .sidebar-nav > .sidebar-brand a {
+//     color: #999;
+// }
+//
+// .sidebar-nav > .sidebar-brand a:hover {
+//     color: #fff;
+//     background: none;
+// }
+// .images {
+//   background-size: cover;
+//   background-position: center;
+//   width: 24%;
+//   height: 500px;
+//   margin: 10px 0;
+//   padding: 0;
+//   position: relative
+// }
+//
+// .images .hidden-text {
+// position:relative;
+// visibility: hidden;
+// text-align: center;
+// padding: 10%;
+// color: white;
+// font-size: 20px;
+// }
+//
+// .images .hidden-buttons {
+// width:89%;
+// height: 20px;
+// position:relative;
+// visibility: hidden;
+// align-items: center;
+// padding: 10%;
+// margin: 1px 5%;
+// color: white;
+// }
+//
+// .images:hover > .overlay {
+//     width:100%;
+//     height:100%;
+//     position:absolute;
+//     background-color:#000;
+//     opacity:0.5;
+// }
+// .images:hover .hidden-text {
+// visibility: visible;
+// }
+// .images:hover .hidden-buttons {
+// visibility: visible;
+// }
